2011-09-13  Eric Seidel  <eric@webkit.org>

        Remove ENABLE_SVG_USE as <use> is required by HTML5
        https://bugs.webkit.org/show_bug.cgi?id=68019

        Reviewed by Ryosuke Niwa.

        * features.gypi:

2011-09-13  Adam Barth  <abarth@webkit.org>

        [Chromium] The checked state of WebPopupMenuItem isn't initialized
        https://bugs.webkit.org/show_bug.cgi?id=67889

        Reviewed by Darin Fisher.

        It seems we're failing to initialize the checked state of
        WebPopupMenuItems, potentially because Android is the first platform to
        use popup menus for <select> elements.

        * src/ExternalPopupMenu.cpp:
        (WebKit::ExternalPopupMenu::getPopupMenuInfo):

2011-09-13  Eric Seidel  <eric@webkit.org>

        Remove ENABLE_SVG_FOREIGN_OBJECT as it is a required part of HTML5
        https://bugs.webkit.org/show_bug.cgi?id=68018

        Reviewed by Ryosuke Niwa.

        * features.gypi:

2011-09-13  James Simonsen  <simonjam@chromium.org>

        [Chromium] Ref protect element in FrameLoaderClientImpl::createPlugin
        https://bugs.webkit.org/show_bug.cgi?id=68014

        Reviewed by Nate Chapin.

        Test: plugins/destroy-during-npp-new.htm under valgrind

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::createPlugin):

2011-09-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2011-09-12  Fumitoshi Ukai  <ukai@chromium.org>

        Unreviewed. Roll DEPS again.

        * DEPS:

2011-09-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r95015.
        http://trac.webkit.org/changeset/95015
        https://bugs.webkit.org/show_bug.cgi?id=67987

        compiled failed on Chromium Win bot (Requested by ukai on
        #webkit).

        * DEPS:

2011-09-12  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2011-09-12  David Levin  <levin@chromium.org>